--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Seconde week project</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
 <div class="container">
     <form action="/action_page.php">
         <div class="form-group">
-                <label for="sel1">Date of birth:</label>
+            <label for="sel1">Date of birth:</label>
             <input type="date" name="dob">
         </div>
         <div class="form-group">
