--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script rel="stylesheet" href="js/bootstrap.min.js"></script>
+    <script rel="stylesheet" href="js/script.js"></script>
     <title>Seconde week project</title>
 </head>
 <body>
         <div class="jumbotron text-center">
-                <h1>Fill out this form:</h1>
+         <h1>Akan names form Detector</h1>
+         <p>Fill out the form below,so as you can know your name.</p>
         </div>
 <div class="container">
+     
     <form action="/action_page.php">
         <div class="form-group">
             <label for="sel1">Date of birth:</label>
