--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="jumbotron text-center ">
                 <h1>Akan names generator</h1>
                </div>
-               <form class="form-horizontal" >
+               <form class="form-vertical" >
                 <div class="form-group">
                   <label class="control-label col-md-6" for="date">Date of birth:</label>
-                  <div class="col-md-3">
+                  <div class="col-md-5">
                         <select class="form-control" id="months">
                                 <option>select month</option>
                                 <option>January</option>
@@ -35,7 +35,7 @@
                                 <option>December</option>
                               </select>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-5">
                         <select class="form-control" id="days">
                                 <option>select date</option>
                                 <option>1</option>
@@ -72,7 +72,7 @@
 
                               </select>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-5">
                         <select class="form-control" id="years">
                                 <option>select year</option>
                                 <option>1989</option>
@@ -120,7 +120,7 @@
                 </div>
                 </div>
                 <div class="form-group"> 
-                  <div class="col-md-offset-2 col-md-10">
+                  <div class="col-md-offset-5 col-md-10">
                     <button type="submit" class="btn btn-default" id="submit"
                     onclick = "dayOfTheWeek()">Submit</button>
                    
