add changes on button

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="form-group"> 
                   <div class="col-md-offset-5 col-md-10">
-                    <button type="submit" class="btn btn-default" id="submit"
+                    <button type="submit" class="btn btn-primary" id="submit"
                     onclick = "dayOfTheWeek()">Submit</button>
                    
                     
