--- a/index.html
+++ b/index.html
@@ -21,33 +21,32 @@
            These "day names" have further meanings concerning the soul and character of the person.<br>
            Middle names have considerably more variety and can refer to their birth order,twin status, or an ancestor's middle name.</p>
       </div>
-      <div class="col-md-6">
-        <h3>Fill out this form to know your Akan name</h3><br>
-        <div class = "form-group">
-          <label class = "control-label col-md-3"  for = "date">Date of birth:</label>
-          <div>
-           <input type = "date" class = "form-control" id = "date" >
-          </div>  
-        </div>
-        <div class="form-group">
-          <label class="control-label col-md-3" for="gender">Gender:</label>
-          <div > 
-            <select class="form-control" id = "gender">
-              <option id="validationMessage">select your gender</option>
-              <option id ="m" value="Male">Male</option>
-              <option id ="f" value="Female">Female</option>
-            </select>
+        <div class="col-md-6">
+          <h3>Fill out this form to know your Akan name</h3><br>
+          <div class = "form-group">
+            <label class = "control-label col-md-3"  for = "date">Date of birth:</label>
+            <div>
+             <input type = "date" class = "form-control" id = "date" >
+            </div>  
           </div>
-        </div>
-        <div class="form-group"> 
-          <div >
-            <br><button type ="submit" class = "btn btn-primary" id="submit"onclick = "dayOfTheWeek()">Submit</button>
+          <div class="form-group">
+            <label class="control-label col-md-3" for="gender">Gender:</label>
+            <div > 
+              <select class="form-control" id = "gender">
+                <option>select your gender</option>
+                <option id ="m" value="Male">Male</option>
+                <option id ="f" value="Female">Female</option>
+              </select>
+            </div>
           </div>
-        </div>     
-          <br> <p id="demo"></p>
-      </div>
-     
-    </div>
+          <div class="form-group"> 
+            <div >
+              <br><button type ="submit" class = "btn btn-primary" id="submit"onclick = "dayOfTheWeek()">Submit</button>
+            </div>
+          </div>     
+            <br> <p id="demo"></p>
+        </div>
+  </div>
     <div class="footer">
       <h4>Copyright &copy;YvonneGi.All right reserved</h4>
     </div>
